Lens/deploy/metrics/vmalert.yaml
apiVersion: v1
kind: Service
metadata:
  name: primus-lens-vmalert
  namespace: primus-lens
  labels:
    app: primus-lens-vmalert
spec:
  selector:
    app.kubernetes.io/name: vmalert
    app.kubernetes.io/instance: primus-lens-vmalert
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
